@@ -131,6 +131,38 @@ name|hadoop
 operator|.
 name|hbase
 operator|.
+name|mapred
+operator|.
+name|TableMapReduceUtil
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|mapred
+operator|.
+name|TableReduce
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
 name|util
 operator|.
 name|Bytes
